src/test/resources/typeSystemTestModels/valid/classes/ClassInnerTypeNotNamedAsEnclosing.java
package typeSystemTestModels.valid.classes;

public class ClassInnerTypeNotNamedAsEnclosing {

  public class A {

    public class B {

    }

  }

}